k3s/namespace-default/petclinic-combined.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: alexstue/jul24-petclinic:1.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic
  type: ClusterIP # LoadBalancer not working without AWS
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30001
